fix styling
Using percentages of viewport height makes no sense unless parent and sibling elements are also defined in these terms.  There is also no need to force a (guaranteed to be redundant) horizontal scrollbar.

--- a/src/_sass/_components.scss
+++ b/src/_sass/_components.scss
@@ -89,6 +89,6 @@ tr:nth-child(even) {
 }
 
 .help-text {
-  max-height: 85.5vh;
-  overflow: scroll;
+  height: 100%;
+  overflow-y: auto;
 }
